--- a/gallery_se_so_neon.html
+++ b/gallery_se_so_neon.html
@@ -356,6 +356,15 @@ padding-right: 30px;
 		></a></figure><figure class="wp-block-image none ratio_1-1" style="grid-row-end: span 11;">
 
 
+<a href="/Users/sophiastrange/Downloads/projects/website portfolio/portfolio/projects/concert photography/SE SO NEON/IMG_0257_BW.jpg
+"> <img decoding="async" width="4865" height="3243" 
+		src="/Users/sophiastrange/Downloads/projects/website portfolio/portfolio/projects/concert photography/SE SO NEON/IMG_0257_BW.jpg
+" alt="SE SO NEON" class="wp-image-545" 
+		></a></figure><figure class="wp-block-image none ratio_1-1" style="grid-row-end: span 11;">
+
+
+
+
 <p></p>
 
 					<div class="gallery-nav-buttons" id="galleryNavBtns">
